<resources>
    <string name="app_name">Lab1</string>
    <string name="imie">Imie</string>
    <string name="wpisz_imie">Wpisz imie</string>
    <string name="liczba_ocen">Liczba ocen</string>
    <string name="nazwisko">Nazwisko:</string>
    <string name="wpisz_nazwisko">Wpisz nazwisko</string>
    <string name="wpisz_liczbe_ocen_5_15">Wpisz liczbe ocen [5–15]</string>
    <string name="button">Oceny</string>
    <string name="obliczSrBTN">OBLICZ SREDNIA</string>
    <string name="bledne_dane">Niepoprawne dane</string>
    <string name="fail">Tym razem mi nie poszlo</string>
    <string name="gratulacje">Gratulacje! Otrzymujesz zaliczenie!</string>
    <string name="warunek">Wysyłam podanie o zaliczenie warunkowe</string>
    <string name="twojaSr">Twoja srednia to </string>
    <string name="wynik">Wynik:</string>
    <string name="zdane">Super!</string>
    <string name="dwa">2</string>
    <string name="trzy">3</string>
    <string name="cztery">4</string>
    <string name="piec">5</string>
    <string name="ang">ang</string>
    <string-array name="przedmioty">
        <item>Ang</item>
        <item>Fiz</item>
        <item>Polski</item>
        <item>Mat</item>
        <item>WF</item>
        <item>Chem</item>
        <item>Wos</item>
        <item>Hist</item>
        <item>Muzyka</item>
        <item>PP</item>
        <item>Biol</item>
        <item>Rosyjki</item>
        <item>BHP</item>
        <item>Inf</item>
        <item>Plastyka</item>
    </string-array>

</resources>